--- a/DesafioTecnicoArtycs.Domain/DesafioTecnicoArtycs.Domain.csproj
+++ b/DesafioTecnicoArtycs.Domain/DesafioTecnicoArtycs.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Selenium.WebDriver" Version="4.9.1" />
+  </ItemGroup>
+
 </Project>
