adicionando documentação swagger

--- a/src/DesafioTecnicoArtycs.Domain/DesafioTecnicoArtycs.Domain.csproj
+++ b/src/DesafioTecnicoArtycs.Domain/DesafioTecnicoArtycs.Domain.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.9.1" />
   </ItemGroup>
 
