--- a/src/DesafioTecnicoArtycs.Application/DesafioTecnicoArtycs.Application.csproj
+++ b/src/DesafioTecnicoArtycs.Application/DesafioTecnicoArtycs.Application.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.9.1" />
   </ItemGroup>
 
