--- a/src/DesafioTecnicoArtycs.Api/appsettings.json
+++ b/src/DesafioTecnicoArtycs.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "Settings": {
-    "ConnectionString": "Data Source=.\\DesafioTecnicoArtycsDB.db"
+    "ConnectionString": "Data Source=.\\DesafioTecnicoArtycsDB.db",
+    "CaminhoWebDriverChrome": "D:\\Selenium\\chromedriver"
   },
   "Authentication": {
     "ClientId": "414fde74-d5e6-48ab-8063-9111c6b74d71"
